# inf2004-embedded-systems-project

./: .gitignore  LICENSE  README.md
dashboard/: README.md
docs/5v-pwm-fan/: 5v_fan_wiring_diagram.drawio  README.md
docs/5v_pwm_fan/: 5v_fan_wiring_diagram.drawio  README.md
drivers/: CMakeLists.txt  inf2004_credentials_example.h
drivers/5v-pwm-fan/: 5v-pwm-fan.c  5v_pwm_fan.c  CMakeLists.txt  NFA4X10_5v_pwm_fan.ino  README.md
drivers/AS7341_spectro_mqtt/: AS7341_Rebuilt.c  AS7341_spectro_mqtt.c  CMakeLists.txt  cycle_delay.S  lwipopts.h  mqtt_Rebuilt.c  ws2812b_Rebuilt.c
drivers/AS7341_spectro_sample/: AS7341_Rebuilt.c  AS7341_Rebuilt.h  AS7341_spectro_sample.c  CMakeLists.txt
drivers/FS3000_airflow_mqtt/: CMakeLists.txt  FS3000_Rebuilt.c  FS3000_airflow_mqtt.c  mqtt_Rebuilt.h  ws2812b_Rebuilt.c  ws2812b_Rebuilt.h
drivers/FS3000_airflow_sample/: CMakeLists.txt  FS3000_Rebuilt.h  FS3000_airflow_sample.c
drivers/MLX90614_ir_mqtt/: CMakeLists.txt  MLX90614_ir_mqtt.c  MLX90614_rebuilt.c  MLX90614_rebuilt.h  i2c_tools.h  ws2812b_Rebuilt.h
drivers/NFA4X10_pwm_fan_mqtt/: CMakeLists.txt  NFA4X10_Rebuilt.c  NFA4X10_Rebuilt.h  NFA4X10_pwm_fan_mqtt.c  mqtt_Rebuilt.c  ws2812b_Rebuilt.h
drivers/NFA4X10_pwm_fan_sample/: CMakeLists.txt  NFA4X10_Rebuilt.c  NFA4X10_Rebuilt.h  NFA4X10_pwm_fan_sample.c
drivers/SCD41_co2_mqtt/: CMakeLists.txt  SCD41_co2_mqtt.c  Sensirion_i2c_scd4x.c  mqtt_Rebuilt.h  scd4x_i2c.c  sensirion_common.c  sensirion_i2c.c  sensirion_i2c_hal.c  ws2812b_Rebuilt.h
drivers/SCD41_co2_sample/: CMakeLists.txt  SCD41_co2_sample.c  Sensirion_i2c_scd4x.h  i2c_tools.c
drivers/WS2812B_led_mqtt/: CMakeLists.txt  WS2812B_led_mqtt.c  WS2812B_led_mqtt.c.sandbox_test  mqtt_Rebuilt.h
drivers/binary_led_sample/: CMakeLists.txt  binary_led_sample.c
drivers/buzzer_sample/: CMakeLists.txt  buzzer_sample.c
drivers/mlx90614_ir_sample/: CMakeLists.txt  MLX90614_rebuilt.c  i2c_tools.c  i2c_tools.h  mlx90614_ir_sample.c
drivers/wifi_connect_test/: CMakeLists.txt  wifi_connect_test.c
drivers/wifi_mqtt_test/: CMakeLists.txt  internet_example.c  wifi_mqtt_test.c
drivers/wifi_scan/: CMakeLists.txt
drivers/ws2812b_led_sample/: CMakeLists.txt  ws2812b_led_sample.c
drivers/ws2812b_led_test/: ws2812b_led_test.c
lib/i2c_tools/: i2c_tools.c  i2c_tools.h
lib/ws2812b/: ws2812b_Rebuilt.c
